Implement login code. Check against old aspnet Membership passwords

--- a/NietoYostenMvc/Content/styles.css
+++ b/NietoYostenMvc/Content/styles.css
@@ -10,6 +10,22 @@
     color: #ffffff;
 }
 
+.login-corner
+{
+    background-color: #1a1010;
+    text-align: center;    
+}
+
+.login-corner a:link
+{
+    color: #cfcfcf;
+}
+
+.login-corner a:visited
+{
+    color: #cfcfcf;    
+}
+
 .navbar-default
 {
     background-color: #433232;
