--- a/NietoYostenMvc/Views/Shared/_Layout.cshtml
+++ b/NietoYostenMvc/Views/Shared/_Layout.cshtml
@@ -36,9 +36,29 @@
             <div class="navbar-collapse collapse">
                 <!-- Menu items: replace with helper/partial to generate code based on current logged in user -->
                 <ul class="nav navbar-nav">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">News</a></li>
-                    <li><a href="#">Member Sections</a></li>
+                    <li><a href="~/">Home</a></li>
+                    <li><a href="~/news">News</a></li>
+                    <li><a href="#">Family</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Corners <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Papi</a></li>
+                            <li><a href="#">Mami</a></li>
+                            <li><a href="#">Rafa</a></li>
+                            <li><a href="#">Helen</a></li>
+                            <li><a href="#">Ani</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sections <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Reflexiones</a></li>
+                            <li><a href="#">Citas</a></li>
+                            <li><a href="#">Chistes</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Links</a></li>
+                    <li><a href="http://fotki.com/nietoyosten">Fotki</a></li>
                 </ul>
                 <form class="navbar-form navbar-right">
                     <div class="form-group">
