--- a/NietoYostenMvc/Content/styles.css
+++ b/NietoYostenMvc/Content/styles.css
@@ -50,3 +50,18 @@
     background-color: rgba(0, 0, 0, 0);
     color: #9999FF;
 }
+
+.family-pic {
+    text-align: center;
+    margin: auto;
+    display: block;
+}
+
+.article-date {
+    text-align: right;
+    font-size: smaller;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    line-height: 1.5em;
+    font-family: "Trebuchet MS";
+}
