--- a/NietoYostenMvc/Views/Account/Register.cshtml
+++ b/NietoYostenMvc/Views/Account/Register.cshtml
@@ -3,19 +3,28 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row">
-    <div class="col-md-5">
-        @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { role = "form" }))
-        {
-            @Html.AntiForgeryToken()
-            <h2>Regístrate</h2>
-            @Html.ValidationSummary(true)
-            <div>
-                Error message here.
-            </div>
+
+@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { role = "form" }))
+{
+    @Html.AntiForgeryToken()
+    @Html.ValidationSummary(true)
+    
+    if (!string.IsNullOrWhiteSpace(ViewBag.ErrorMessage))
+    {
+        <div class="alert alert-danger">  
+          <a class="close" data-dismiss="alert" href="#" area-hidden="true">&times;</a>
+          @ViewBag.ErrorMessage
+        </div>
+    }
+    
+    <h2>Regístrate</h2>
+     
+    <div class="row">
+        <div class="col-md-5">
             <div class="form-group">
                 <label for="email">Dirección de email</label>
-                <input type="email" class="form-control" name="email">
+                <input type="email" class="form-control" name="email" id="email" data-val="true" data-val-required="Requerido">
+                <span class="field-validation-valid" data-valmsg-for="reason" data-valmsg-replace="true"></span>
             </div>
             <div class="form-group">
                 <label for="password">Contraseña</label>
@@ -25,7 +34,13 @@
                 <label for="confirm">Escribe la contraseña de nuevo</label>
                 <input type="password" class="form-control" name="confirm">
             </div>
-            <button type="submit" class="btn btn-default">Registrar</button>
-        }
+        </div>
     </div>
-</div>
+    <div class="form-group">
+        <label for="confirm">Razón</label>
+        <textarea class="form-control" name="reason" id="reason" data-val="true" data-val-required="Requerido"></textarea>
+        <span class="field-validation-valid" data-valmsg-for="reason" data-valmsg-replace="true"></span>
+        <span class="help-block">Por favor escribe una pequeña descripción para approvar tu cuenta.</span>
+    </div>
+    <button type="submit" class="btn btn-default">Enviar</button>
+}
