--- a/NietoYostenMvc/Views/Account/Login.cshtml
+++ b/NietoYostenMvc/Views/Account/Login.cshtml
@@ -3,13 +3,15 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row">
-    <div class="col-md-5">
-        @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { role = "form" }))
-        {
-            @Html.AntiForgeryToken()
-            <h2>Member Log In</h2>
-            @Html.ValidationSummary(true)
+@HTML.ErrorMessage(ViewBag.ErrorMessage)
+<h2>Member Log In</h2>
+
+@using (Html.BeginForm("Login", "Account", new {ReturnUrl = ViewBag.ReturnUrl}, FormMethod.Post, new {role = "form"}))
+{
+    @Html.AntiForgeryToken()
+    @Html.ValidationSummary(true)
+    <div class="row">
+        <div class="col-md-5">    
             <div class="form-group">
                 <label for="email">Email address</label>
                 <input type="email" class="form-control" name="email">
@@ -19,9 +21,9 @@
                 <input type="password" class="form-control" name="password">
             </div>
             <button type="submit" class="btn btn-default">Log In</button>
-        }
+        </div>
     </div>
-</div>
+}
 <br>
 <!-- Facebook Login: replace with helper/partial to generate facebook login button -->
 <p>Log In with Facebook</p>
