--- a/NietoYostenMvc/Views/Account/Register.cshtml
+++ b/NietoYostenMvc/Views/Account/Register.cshtml
@@ -3,22 +3,14 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@HTML.ErrorMessage(ViewBag.ErrorMessage)
+<h2>Regístrate</h2>
 
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { role = "form" }))
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
     
-    if (!string.IsNullOrWhiteSpace(ViewBag.ErrorMessage))
-    {
-        <div class="alert alert-danger">  
-          <a class="close" data-dismiss="alert" href="#" area-hidden="true">&times;</a>
-          @ViewBag.ErrorMessage
-        </div>
-    }
-    
-    <h2>Regístrate</h2>
-     
     <div class="row">
         <div class="col-md-5">
             <div class="form-group">
