Add family member's page.

--- a/NietoYostenMvc/App_Code/Home.cshtml
+++ b/NietoYostenMvc/App_Code/Home.cshtml
@@ -47,7 +47,7 @@
     <ul class="nav navbar-nav">
     <li><a href="~/">Home</a></li>
     <li><a href="~/news">News</a></li>
-    <li><a href="#">Family</a></li>
+    <li><a href="~/home/family">Family</a></li>
     @if (controller.IsCurrentUserInRole("family") || controller.IsCurrentUserInRole("friend"))
     {
         <li class="dropdown">
