--- a/NietoYostenMvc/Views/Account/Login.cshtml
+++ b/NietoYostenMvc/Views/Account/Login.cshtml
@@ -3,7 +3,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@HTML.ErrorMessage(ViewBag.ErrorMessage)
+@HTML.AlertMessage(ViewBag.AlertMessage, ViewBag.AlertClass)
 <h2>Member Log In</h2>
 
 @using (Html.BeginForm("Login", "Account", new {ReturnUrl = ViewBag.ReturnUrl}, FormMethod.Post, new {role = "form"}))
