--- a/NietoYostenMvc/App_Code/Home.cshtml
+++ b/NietoYostenMvc/App_Code/Home.cshtml
@@ -45,37 +45,37 @@
 @helper MenuItems(ApplicationController controller)
 {
     <ul class="nav navbar-nav">
-    <li><a href="~/">Home</a></li>
-    <li><a href="~/news">News</a></li>
-    <li><a href="~/home/family">Family</a></li>
-    @if (controller.IsCurrentUserInRole("family") || controller.IsCurrentUserInRole("friend"))
-    {
-        <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Corners <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-                <li><a href="#">Papi</a></li>
-                <li><a href="#">Mami</a></li>
-                <li><a href="#">Rafa</a></li>
-                <li><a href="#">Helen</a></li>
-                <li><a href="#">Ani</a></li>
-            </ul>
-        </li>
-    }
-    <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sections <b class="caret"></b></a>
-        <ul class="dropdown-menu">
-            <li><a href="#">Reflexiones</a></li>
-            <li><a href="#">Citas</a></li>
-            <li><a href="#">Chistes</a></li>
-        </ul>
-    </li>
-    <li><a href="#">Links</a></li>
-    <li><a href="http://fotki.com/nietoyosten">Fotki</a></li>
-</ul>
-<form class="navbar-form navbar-right">
-    <div class="form-group">
-        <input type="text" class="form-control">
-    </div>
-    <button type="submit" class="btn btn-default">Search</button>
-</form>
+        <li><a href="~/">Home</a></li>
+        @if (controller.CurrentUserHasRole("friend"))
+        {
+            <li><a href="~/news">News</a></li>
+            <li><a href="~/home/family">Family</a></li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Corners <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Papi</a></li>
+                    <li><a href="#">Mami</a></li>
+                    <li><a href="#">Rafa</a></li>
+                    <li><a href="#">Helen</a></li>
+                    <li><a href="#">Ani</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sections <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Reflexiones</a></li>
+                    <li><a href="#">Citas</a></li>
+                    <li><a href="#">Chistes</a></li>
+                </ul>
+            </li>
+            <li><a href="#">Links</a></li>
+        }
+        <li><a href="http://fotki.com/nietoyosten">Fotki</a></li>
+    </ul>
+    <form class="navbar-form navbar-right">
+        <div class="form-group">
+            <input type="text" class="form-control">
+        </div>
+        <button type="submit" class="btn btn-default">Search</button>
+    </form>
 }
