First go live: minor fixes to database migration script, web.config to make it work in prod.

--- a/NietoYostenMvc/Views/Account/Login.cshtml
+++ b/NietoYostenMvc/Views/Account/Login.cshtml
@@ -29,4 +29,4 @@
 <p>Log In with Facebook</p>
 <br>
 <p>Olvidaste tu password? Da click <a href="#">aquí</a>.</p>
-<p>No tienes una cuenta aún? Da click <a href="#">aquí</a> para crear tu cuenta.</p>
+<p>No tienes una cuenta aún? Da click @Html.ActionLink("aquí", "Register", "Account").</p>
