Integrate ImageResizer module

--- a/NietoYostenMvc/Views/Pictures/ShowPicture.cshtml
+++ b/NietoYostenMvc/Views/Pictures/ShowPicture.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div style="text-align: center">
-    <p><img src="~/Content/pictures/web/@Model.FolderName/@Model.FileName"/></p>
+    <p><img src="~/Content/pictures/original/@Model.FolderName/@Model.FileName?w=640&h=640&mode=max"/></p>
     <p>@Model.Title</p>
     <p><a href="~/Content/pictures/original/@Model.FolderName/@Model.FileName">Descargar original</a></p>
 </div>
