--- a/NietoYostenMvc/Views/Pictures/ShowAlbum.cshtml
+++ b/NietoYostenMvc/Views/Pictures/ShowAlbum.cshtml
@@ -21,7 +21,7 @@
                         <div class="thumbnail" style="text-align: center">
                             <p>
                                 <a href="~/pictures/@ViewBag.Title/@picture.Title">
-                                    <img src="~/content/pictures/thumb/@picture.FolderName/@picture.FileName" />
+                                    <img src="~/content/pictures/original/@picture.FolderName/@picture.FileName?Height=120" />
                                 </a>
                             </p>
                             <p><input type="checkbox" title="@picture.Title" />@picture.Title</p>
