--- a/NietoYostenMvc/Views/Pictures/ShowAlbum.cshtml
+++ b/NietoYostenMvc/Views/Pictures/ShowAlbum.cshtml
@@ -20,7 +20,7 @@
                     <div class="col-md-3">
                         <div class="thumbnail" style="text-align: center">
                             <p>
-                                <a href="~/pictures/@ViewBag.Title/@picture.Title">
+                                <a href="~/pictures/@ViewBag.Title/@picture.ID">
                                     <img src="~/content/pictures/original/@picture.FolderName/@picture.FileName?Height=120" />
                                 </a>
                             </p>
