Add pagination to pictures section. Add exception handling to forms auth decryption.

--- a/NietoYostenMvc/Views/Pictures/ShowAlbum.cshtml
+++ b/NietoYostenMvc/Views/Pictures/ShowAlbum.cshtml
@@ -2,8 +2,6 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>@ViewBag.Title</h2>
-
 <div class="row">
     <!-- Pictures menu column -->
     <div class="col-md-2">
@@ -12,7 +10,24 @@
     
     <!-- Picture thumbnails grid (4 pics per row) -->
     <div class="col-md-10">
-        @foreach (var row in @Model)
+        <!-- Title and pagination row -->
+        <div class="row">
+            <h2>@ViewBag.Title</h2>
+            <ul class="pagination">
+                @for (int i = 1; i <= @Model.TotalPages; i++)
+                {
+                    if (i == @Model.CurrentPage)
+                    {
+                        <li class="active"><a href="~/pictures/@ViewBag.Title?Page=@i">@i</a></li>
+                    }
+                    else
+                    {
+                        <li><a href="~/pictures/@ViewBag.Title?Page=@i">@i</a></li>
+                    }
+                }
+            </ul>
+        </div>
+        @foreach (var row in @Model.ThumbArray)
         {
             <div class="row">
                 @foreach (var picture in row)
