--- a/NietoYostenMvc/App_Code/Home.cshtml
+++ b/NietoYostenMvc/App_Code/Home.cshtml
@@ -72,6 +72,15 @@
             <li><a href="~/pictures">Pictures</a></li>
         }
         <li><a href="http://fotki.com/nietoyosten">Fotki</a></li>
+        @if (controller.CurrentUserHasRole("admin"))
+        {
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                    <li><a href="~/elmah">Elmah</a></li>
+                </ul>
+            </li>
+        }
     </ul>
     <form class="navbar-form navbar-right">
         <div class="form-group">
