--- a/NietoYostenMvc/Views/Pictures/Index.cshtml
+++ b/NietoYostenMvc/Views/Pictures/Index.cshtml
@@ -7,5 +7,5 @@
 
 @foreach (var album in @Model)
 {
-    <p><a href="~/pictures/@album.Title">@album.Title</a></p>
+    <p><a href="~/pictures/@album.FolderName">@album.Title</a></p>
 }
