--- a/NietoYostenMvc/Views/Pictures/ShowPicture.cshtml
+++ b/NietoYostenMvc/Views/Pictures/ShowPicture.cshtml
@@ -1,10 +1,29 @@
 ﻿@{
     ViewBag.Title = "ShowPicture";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    string previousButtonDisabled = @Model.PreviousID == null ? "disabled=\"disabled\"" : "";
+    string nextButtonDisabled = @Model.NextID == null ? "disabled=\"disabled\"" : "";
 }
 
 <div style="text-align: center">
-    <p><img src="~/Content/pictures/original/@Model.FolderName/@Model.FileName?w=640&h=640&mode=max"/></p>
-    <p>@Model.Title</p>
-    <p><a href="~/Content/pictures/original/@Model.FolderName/@Model.FileName">Descargar original</a></p>
+    <p>
+        <button type="button" class="btn btn-default" id="@Model.PreviousID" @previousButtonDisabled>
+            <span class="glyphicon glyphicon-arrow-left" style="font-size: 2em"></span>
+        </button>
+        &nbsp;&nbsp;&nbsp;
+        <a href="~/pictures/@Model.Picture.FolderName?page=@Model.AlbumPage">Regresar al album</a>
+        &nbsp;&nbsp;&nbsp;
+        <button type="button" class="btn btn-default" id="@Model.NextID" @nextButtonDisabled>
+            <span class="glyphicon glyphicon-arrow-right" style="font-size: 2em"></span>
+        </button>
+    </p>
+    <p><img src="~/Content/pictures/original/@Model.Picture.FolderName/@Model.Picture.FileName?w=640&h=640&mode=max"/></p>
+    <p>@Model.Picture.Title</p>
+    <p><a href="~/Content/pictures/original/@Model.Picture.FolderName/@Model.Picture.FileName">Descargar original</a></p>
 </div>
+
+<script type="text/javascript">
+    $('button').click(function (evt) {
+        window.location.href = this.id;
+    });
+</script>
