--- a/NietoYostenMvc/App_Code/Home.cshtml
+++ b/NietoYostenMvc/App_Code/Home.cshtml
@@ -77,6 +77,7 @@
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin <b class="caret"></b></a>
                 <ul class="dropdown-menu">
+                    <li><a href="~/Account/ApprovalRequests">Approval requests</a></li>
                     <li><a href="~/elmah">Elmah</a></li>
                 </ul>
             </li>
