Initial picture upload code. Changed routing for pictures controller.

--- a/NietoYostenMvc/Views/Pictures/ShowAlbum.cshtml
+++ b/NietoYostenMvc/Views/Pictures/ShowAlbum.cshtml
@@ -6,6 +6,7 @@
     <!-- Pictures menu column -->
     <div class="col-md-2">
         <p>Pictures menu</p>
+        <a href="~/Pictures/Upload/@Model.FolderName">Subir fotos</a>
     </div>
     
     <div class="col-md-10">
@@ -39,7 +40,7 @@
                     <div class="col-md-3">
                         <div class="thumbnail" style="text-align: center">
                             <p>
-                                <a href="~/pictures/@picture.FolderName/@picture.ID">
+                                <a href="~/pictures/view/@picture.ID">
                                     <img src="~/content/pictures/original/@picture.FolderName/@picture.FileName?Height=120" />
                                 </a>
                             </p>
