--- a/NietoYostenMvc/Views/Pictures/ShowPicture.cshtml
+++ b/NietoYostenMvc/Views/Pictures/ShowPicture.cshtml
@@ -11,7 +11,7 @@
             <span class="glyphicon glyphicon-arrow-left" style="font-size: 2em"></span>
         </button>
         &nbsp;&nbsp;&nbsp;
-        <a href="~/pictures/@Model.Picture.FolderName?page=@Model.AlbumPage">Regresar al album</a>
+        <a href="~/pictures/album/@Model.Picture.FolderName?page=@Model.AlbumPage">Regresar al album</a>
         &nbsp;&nbsp;&nbsp;
         <button type="button" class="btn btn-default" id="@Model.NextID" @nextButtonDisabled>
             <span class="glyphicon glyphicon-arrow-right" style="font-size: 2em"></span>
