Fix previous, next button bug; album page number bug.

--- a/NietoYostenMvc/Views/Pictures/ShowAlbum.cshtml
+++ b/NietoYostenMvc/Views/Pictures/ShowAlbum.cshtml
@@ -20,11 +20,11 @@
                     {
                         if (i == @Model.CurrentPage)
                         {
-                            <li class="active"><a href="~/pictures/@Model.FolderName?Page=@i">@i</a></li>
+                            <li class="active"><a href="~/pictures/album/@Model.FolderName?Page=@i">@i</a></li>
                         }
                         else
                         {
-                            <li><a href="~/pictures/@Model.FolderName?Page=@i">@i</a></li>
+                            <li><a href="~/pictures/album/@Model.FolderName?Page=@i">@i</a></li>
                         }
                     }
                 </ul>
