Rearrange upload pictures view, add vertical 'menu'

--- a/NietoYostenMvc/Views/Pictures/Upload.cshtml
+++ b/NietoYostenMvc/Views/Pictures/Upload.cshtml
@@ -3,23 +3,40 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Subit fotos</h2>
-
 <div id="ErrorMessage" class="alert alert-danger" style="display: none">
     <a class="close" data-dismiss="alert" href="#" area-hidden="true">&times;</a>
 </div>
 
-<div id="TopParagraph">
-    <input type="file" id="files" name="files[]" multiple="true" value="Select Files" /><br/>
-    <input type="button" id="UploadButton" value="Upload" />
+<!-- Page Title row -->
+<div class="row">
+    <div class="col-md-10 col-md-offset-2">
+        <h2>Subir fotos</h2>
+    </div>
 </div>
-<br/>
-<table id="FileTable" class="table" style="display: none;">
-    <tr>
-        <th>File</th>
-        <th>Upload progress</th>
-        <th>Status</th>
-    </tr>
-</table>
+
+<div class="row">
+    <!-- Menu column -->
+    <div class="col-md-2">
+        <p><a href="~/pictures/album/@Model">Regresar al álbum</a></p>
+        <p><input type="button" id="UploadButton" value="Comenzar carga" /></p>
+    </div>
+    
+    <!-- Upload page -->
+    <div class="col-md-10">
+        <div id="TopParagraph">
+            <p>
+                <input type="file" id="files" name="files[]" multiple="true" value="Select Files" />   
+            </p>
+        </div>
+        <br />
+        <table id="FileTable" class="table" style="display: none;">
+            <tr>
+                <th>File</th>
+                <th>Upload progress</th>
+                <th>Status</th>
+            </tr>
+        </table>
+    </div>
+</div>
 
 <script type="text/javascript" src="~/Scripts/UploadPicture.js"></script>
