Edit/Add articles functionality

--- a/NietoYostenMvc/App_Code/Home.cshtml
+++ b/NietoYostenMvc/App_Code/Home.cshtml
@@ -78,6 +78,7 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                     <li><a href="~/elmah">Elmah</a></li>
+                    <li><a href="~/Article/Index">Artículos</a></li>
                 </ul>
             </li>
         }
