--- a/NietoYostenMvc/App_Code/HTML.cshtml
+++ b/NietoYostenMvc/App_Code/HTML.cshtml
@@ -17,9 +17,11 @@
         {
             alertClass = "alert-success";
         }
-        <div class="alert @alertClass">
-            <a class="close" data-dismiss="alert" href="#" area-hidden="true">&times;</a>
-            @message
+        <div class="row">
+            <div class="alert @alertClass">
+                <a class="close" data-dismiss="alert" href="#" area-hidden="true">&times;</a>
+                @message
+            </div>
         </div>
     }
 }
