--- a/NietoYostenMvc/App_Code/Home.cshtml
+++ b/NietoYostenMvc/App_Code/Home.cshtml
@@ -49,7 +49,7 @@
         @if (controller.IsLoggedIn)
         {
             <li><a href="~/news">News</a></li>
-            <li><a href="~/home/family">Family</a></li>
+            <li><a href="~/sections/family">Family</a></li>
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Corners <b class="caret"></b></a>
                 <ul class="dropdown-menu">
