--- a/NietoYostenMvc/Views/Account/Login.cshtml
+++ b/NietoYostenMvc/Views/Account/Login.cshtml
@@ -27,5 +27,5 @@
 <!-- Facebook Login: replace with helper/partial to generate facebook login button -->
 <p>Log In with Facebook</p>
 <br>
-<p>Olvidaste tu password? Da click @Html.ActionLink("aquí", "PasswordReset", "Account").</p>
+<p>Olvidaste tu password? Da click @Html.ActionLink("aquí", "RecoverPassword", "Account").</p>
 <p>No tienes una cuenta aún? Da click @Html.ActionLink("aquí", "Register", "Account").</p>
