--- a/NietoYostenMvc/Views/Account/RecoverPassword.cshtml
+++ b/NietoYostenMvc/Views/Account/RecoverPassword.cshtml
@@ -1,12 +1,12 @@
 ﻿@{
-    ViewBag.Title = "PasswordReset";
+    ViewBag.Title = "Recover password";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Recuperación de contraseña</h2>
 Por favor escribe la dirección de correo con el que estás dado de alta para enviarte un nuevo password.
 
-@using (Html.BeginForm("PasswordReset", "Account", FormMethod.Post, new { role = "form" }))
+@using (Html.BeginForm("RecoverPassword", "Account", FormMethod.Post, new { role = "form" }))
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
