Add Register link to home page

--- a/NietoYostenMvc/App_Code/Home.cshtml
+++ b/NietoYostenMvc/App_Code/Home.cshtml
@@ -13,7 +13,7 @@
     else
     {
         <br/><br/>
-        <a href="~/account/login">Login</a>
+        <p><a href="~/Account/Login">Login</a>&nbsp;|&nbsp;<a href="~/Account/Register">Register</a></p>
     }
 }
 
