--- a/NietoYostenMvc/Views/Account/RecoverPassword.cshtml
+++ b/NietoYostenMvc/Views/Account/RecoverPassword.cshtml
@@ -4,7 +4,7 @@
 }
 
 <h2>Recuperación de contraseña</h2>
-Por favor escribe la dirección de correo con el que estás dado de alta para enviarte un nuevo password.
+Por favor escribe la dirección de correo con el que estás dado de alta.
 
 @using (Html.BeginForm("RecoverPassword", "Account", FormMethod.Post, new { role = "form" }))
 {
