Unit test support. UserFriendlyException handler.

--- a/NietoYostenMvc/App_Code/HTML.cshtml
+++ b/NietoYostenMvc/App_Code/HTML.cshtml
@@ -1,4 +1,6 @@
-﻿@helper ErrorMessage(string message)
+﻿@using System.Web.Mvc
+@using NietoYostenMvc.Code
+@helper ErrorMessage(string message)
 { 
     if (!string.IsNullOrWhiteSpace(message))
     {
