--- a/NietoYostenMvc/Views/Pictures/ShowAlbum.cshtml
+++ b/NietoYostenMvc/Views/Pictures/ShowAlbum.cshtml
@@ -2,11 +2,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row">  
+<div class="row">
     <!-- Menu -->
     <a href="~/Pictures">Lista de álbumes</a>
     <span> | </span>
     <a href="~/Pictures/Upload/@Model.FolderName">Agregar fotos</a>
+    <span> | </span>
     <hr/>
 
     <h2>@ViewBag.Title</h2>
@@ -26,7 +27,7 @@
             }
         </ul>
     }
-        
+
     <!-- Thumbnails grid (4 pics per row) -->
     @if (@Model.ThumbArray.Count == 0)
     {
@@ -43,10 +44,10 @@
                         <div class="thumbnail" style="text-align: center">
                             <p>
                                 <a href="~/pictures/view/@picture.ID">
-                                    <img src="~/azure/pictures/@picture.FolderName/@picture.FileName?Height=120" />
+                                    <img src="~/azure/pictures/@picture.FolderName/@picture.FileName?Height=120"/>
                                 </a>
                             </p>
-                            <p><input type="checkbox" title="@picture.Title" />@picture.Title</p>
+                            <p><input type="checkbox" title="@picture.Title" id="@picture.ID"/>@picture.Title</p>
                         </div>
                     </div>
                 }
@@ -54,3 +55,5 @@
         }
     }
 </div>
+
+<script type="text/javascript" src="~/Scripts/ShowAlbum.js"></script>
