Delete picture link

--- a/NietoYostenMvc/Views/Pictures/ShowAlbum.cshtml
+++ b/NietoYostenMvc/Views/Pictures/ShowAlbum.cshtml
@@ -8,6 +8,7 @@
     <span> | </span>
     <a href="~/Pictures/Upload/@Model.FolderName">Agregar fotos</a>
     <span> | </span>
+    <a id="lnkDelete" href="#">Borrar foto(s)</a>
     <hr/>
 
     <h2>@ViewBag.Title</h2>
