Add facebook login

--- a/NietoYostenMvc/Views/Pictures/Upload.cshtml
+++ b/NietoYostenMvc/Views/Pictures/Upload.cshtml
@@ -31,4 +31,5 @@
     </table>
 </div>
 
+<script type="text/javascript" src="~/Scripts/util.js"></script>
 <script type="text/javascript" src="~/Scripts/UploadPicture.js"></script>
