--- a/NietoYostenMvc/Views/Account/Login.cshtml
+++ b/NietoYostenMvc/Views/Account/Login.cshtml
@@ -3,6 +3,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<div id="fb-root"></div>
 <h2>Member Log In</h2>
 
 @using (Html.BeginForm("Login", "Account", new {ReturnUrl = ViewBag.ReturnUrl}, FormMethod.Post, new {role = "form"}))
@@ -10,7 +11,7 @@
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
     <div class="row">
-        <div class="col-md-5">    
+        <div class="col-md-5">
             <div class="form-group">
                 <label for="email">Email address</label>
                 <input type="email" class="form-control" name="email">
@@ -22,10 +23,14 @@
             <button type="submit" class="btn btn-default">Log In</button>
         </div>
     </div>
+    <input type="hidden" id="return-url" name="return-url" value="@ViewBag.ReturnUrl"/>
 }
-<br>
-<!-- Facebook Login: replace with helper/partial to generate facebook login button -->
-<p>Log In with Facebook</p>
 <br>
 <p>Olvidaste tu password? Da click @Html.ActionLink("aquí", "RecoverPassword", "Account").</p>
 <p>No tienes una cuenta aún? Da click @Html.ActionLink("aquí", "Register", "Account").</p>
+<p/>
+<p>O puedes entrar con Facebook:</p>
+<div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="false" onlogin="fblogin_onlogin"></div>
+
+<script type="text/javascript" src="~/Scripts/util.js"></script>
+<script type="text/javascript" src="~/Scripts/login.js"></script>
