Facebook user registration
Using new api (2.2). Code currently creates new user with IsApproved =
false. Might change this to automatically approve FB registrations and
send notification email to webmaster. Still more refactoring/testing to
do.

--- a/NietoYostenMvc/App_Code/HTML.cshtml
+++ b/NietoYostenMvc/App_Code/HTML.cshtml
@@ -19,8 +19,8 @@
         {
             alertClass = "alert-success";
         }
-        <div class="row">
-            <div class="alert @alertClass">
+        <div class="row" id="msg-bar">
+            <div id="alert-bar" class="alert @alertClass">
                 <a class="close" data-dismiss="alert" href="#" area-hidden="true">&times;</a>
                 @message
             </div>
