--- a/NietoYostenMvc/Views/Shared/_Layout.cshtml
+++ b/NietoYostenMvc/Views/Shared/_Layout.cshtml
@@ -4,7 +4,14 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>@ViewBag.Title - Nieto Yosten Family</title>
+        @if (string.IsNullOrWhiteSpace(ViewBag.Title))
+        {
+            <title>Nieto Yosten Family</title>
+        }
+        else
+        {
+            <title>@ViewBag.Title - Nieto Yosten Family</title>
+        }
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
         <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
